disabled VM fork for tests